--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon src/server",
     "start": "node src/server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Kanak Dullu",
   "license": "MIT",
